운영 환경 최적화 및 전체 시스템 이슈 해결 완료
- 백엔드 Spring 프로필 설정 최적화 (local, dev, production 분리)
- application-production.yml 생성으로 운영 환경 전용 설정 추가
- 프론트엔드 환경 변수 관리 통합 (env.production 제거)
- CORS 보안 설정 환경별 분리 (운영: 특정 도메인만, 개발: 모든 도메인)
- Helm 차트 백엔드 설정 운영 환경 최적화 (dnfp_prod DB, production 프로필)
- 전체 시스템 운영 환경 이슈 해결 및 보안 강화
- 환경별 데이터베이스 분리 (dnfp, dnfp_dev, dnfp_prod)
- 운영 환경 성능 및 보안 최적화 완료